--- a/FAQ.html
+++ b/FAQ.html
@@ -20,21 +20,26 @@
                 <img src="images/ico_arrow.png" alt="arrow-down" id="arrow">
             </div>
             <div class="header">
-                <p class="WKND-logo"></p>
-                <nav>
-                    <ul>
-                        <li>MAGAZINE</li>
-                        <li>ADVENTURES</li>
-                        <li>FAQ</li>
-                        <li>ABOUT US</li>
-                    </ul>
-                </nav>
-                <div class="search-bar">
-                    <p>SEARCH</p>
-                    <img src="images/search-icon.png" alt="search-icon">
+                <p class="WKND-logo">WKND</p>
+                <div class="header-right-cont">
+                    <nav>
+                        <ul>
+                            <li>MAGAZINE</li>
+                            <li>ADVENTURES</li>
+                            <li>FAQ</li>
+                            <li>ABOUT US</li>
+                        </ul>
+                    </nav>
+                    <div class="search-bar">
+                        <p>SEARCH</p>
+                        <img src="images/search-icon.png" alt="search-icon">
+                    </div>
                 </div>
             </div>
         </header>
+        <section class="FAQ">
+            <p>FAQ</p>
+        </section>
     </div>
 </body>
 </html>
