--- a/FAQ.html
+++ b/FAQ.html
@@ -38,8 +38,77 @@
             </div>
         </header>
         <section class="FAQ">
-            <p>FAQ</p>
+            <div class="page-cont">
+                <p class="FAQ-logo">FAQ</p>
+                <img src="images/WKND-image.png" alt="Hicking">
+                <p class="image-txt">WKND is a collective of outdoors, music, crafts, adventure sports, and travel enthusiasts that want to share our experiences, connections, and expertise with the world. Our objective is create a community to help like-minded adventure seekers find fun, engaging, and responsible ways to to enjoy life and create lasting memories.</p>
+                <div class="pull-down-list">
+                    <div class="pull-down-row">
+                        <p>WHO IS WKND’S INTENDED AUDIENCE?</p>
+                        <img src="images/Rectangle 232.png" alt="minus sign" id="minus-sign">
+                    </div>
+                    <p id="row-txt">We believe the best adventures and activities are those that are accessible to everyone. WKND is designed to be inclusive of all age ranges, abilities, and budget-levels. We strive to cater to the thrill-seeking adrenaline junkie BASE-jumpers as well as novices that have a spare weekend and interest in trying something new.  </p>
+                </div>
+                <div class="closed-row">
+                        <p>HOW DOES WKND PAY FOR ITSELF?</p>
+                        <img src="images/WKND-icon.png" alt="plus">
+                </div>
+                <div class="closed-row">
+                    <p>CAN I CONTRIBUTE TO WKND?</p>
+                    <img src="images/WKND-icon.png" alt="plus">
+                </div>
+                <div class="closed-row">
+                    <p>HOW OFTEN IS WKDN UPDATED?</p>
+                    <img src="images/WKND-icon.png" alt="plus">
+                </div>
+                <div class="closed-row">
+                    <p>WHEN WAS WKND FOUNDED?</p>
+                    <img src="images/WKND-icon.png" alt="plus">
+                </div>
+                <div class="closed-row">
+                    <p>IS WKND A REAL COMPANY?</p>
+                    <img src="images/WKND-icon.png" alt="plus">
+                </div>
+            </div>
+            <div class="credentials-cont">
+                <p class="credentials-header">Need more help?</p>
+                <p class="credentials-txt">Give us a call at 1-800-800-0000.<br>
+                    E-mail us at info@wknd.com <br>
+                    We love to talk adventures!</p>
+            </div>
         </section>
+        <section class="FAQ-lower">
+            <div class="line"></div>
+            <div class="lower-cont">
+                <img src="images/WKND-image1.png" alt="image" id="lower-img">
+                <div>
+                    <p class="lower-header">Want WKND in your inbox?</p>
+                    <p class="lower-small-p">Be the first to know about new trips, fresh gear, and co-op offers. We are a good penpal. Promise.</p>
+                    <input type="email" value="Your Email Adress" id="email" name="email">
+                    <button class="sign-up-btn">SIGN UP</button>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <div class="footer-cont">
+                <p class="WKND-logo white">WKND</p>
+                <div class="footer-right-cont">
+                    <nav>
+                        <ul>
+                            <li>MAGAZINE</li>
+                            <li>ADVENTURES</li>
+                            <li>FAQ</li>
+                            <li>ABOUT US</li>
+                        </ul>
+                    </nav>
+                    <div class="logo-cont">
+                        <img src="images/instagram.png" alt="instagram">
+                        <img src="images/facebook.png" alt="facebook">
+                        <img src="images/twitter.png" alt="twitter">
+                    </div>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
