--- a/FAQ.html
+++ b/FAQ.html
@@ -108,6 +108,7 @@
                     </div>
                 </div>
             </div>
+            <p class="copyright">Ⓒ 2019, WKND Demo Site. Intended only as a demonstration of Adobe Experience Manager</p>
         </footer>
     </div>
 </body>
