--- a/FAQ.html
+++ b/FAQ.html
@@ -14,7 +14,7 @@
         <header>
             <div class="header-black-line">
                 <img src="images/human.png" alt="human-icon" id="human">
-                <p>ACCOUNT</p>
+                <p class="black-line-p">ACCOUNT</p>
                 <img src="images/USA.png" alt="flag" id="flag">
                 <p>USA-EN</p>
                 <img src="images/ico_arrow.png" alt="arrow-down" id="arrow">
