--- a/FAQ.html
+++ b/FAQ.html
@@ -26,8 +26,8 @@
                         <ul>
                             <li>MAGAZINE</li>
                             <li>ADVENTURES</li>
-                            <li>FAQ</li>
-                            <li>ABOUT US</li>
+                            <a href="#"><li>FAQ</li></a>
+                            <a href="AboutUs.html"><li>ABOUT US</li></a>
                         </ul>
                     </nav>
                     <div class="search-bar">
