--- a/AboutUs.html
+++ b/AboutUs.html
@@ -145,9 +145,9 @@
                         </ul>
                     </nav>
                     <div class="logo-cont">
-                        <img src="images/instagram.png" alt="instagram">
-                        <img src="images/facebook.png" alt="facebook">
-                        <img src="images/twitter.png" alt="twitter">
+                        <a href="https://www.instagram.com" target="_blank"><img src="images/instagram.png" alt="instagram"></a>
+                        <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png" alt="facebook"></a>
+                        <a href="https://www.twitter.com" target="_blank"><img src="images/twitter.png" alt="twitter"></a>
                     </div>
                 </div>
             </div>
